feat: add theme change

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body{
  line-height:1.5;
 }
 
+
+
 :root{
  /* Палитра */
  --color-bg:#fff; --color-fg:#0b0b0b; --color-muted:#666;
@@ -64,6 +66,18 @@ html{
 
 .header__logo:hover{
   opacity: 0.8;
+}
+
+.hero{
+ background:
+ linear-gradient(to top, rgba(0,0,0,.55), rgba(0,0,0,.15)), /* оверлей для
+контраста текста */
+ url("img/logo-medium.jpg") center/cover no-repeat; /* картинка
+как декор */
+ color:#fff;
+ padding: clamp(2rem, 6vw, 6rem) 1rem; /* адаптивные
+отступы */
+ border-radius:var(--radius);
 }
 
 /* Навигация */
@@ -281,4 +295,21 @@ button:hover {
 
 .forPadding{
   padding: var(--space-2);
+}
+
+.modal__title {
+    margin: 0 0 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.modal__content {
+    text-align: center;
+    padding: 2rem;
+}
+
+.theme-toggle{
+  width: 36px;
+  height: 36px;
+  padding: 0;
 }
